RoboAttributeSet.create() now creates a ResourceParser.XmlResourceParserImpl instance based on a Document built up from the supplied Attribute objects. This enables us to remove the RoboAttributeSet implementation of AttributeSet, leaving us with a single consistent AttributeSet implementation; ResourceParser.XmlResourceParserImpl.
Remove or fix any RoboAttributeSetTests that were incorrect or inappropriate. Fix some bugs that were highlighted by RoboAttributeSetTest when the implementationn was switched.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -682,7 +682,7 @@ public final class ShadowAssetManager {
     if (attributeSet != null) {
       for (int i = 0; i < attributeSet.getAttributeCount(); i++) {
         if (attributeSet.getAttributeNameResource(i) == resId && attributeSet.getAttributeValue(i) != null) {
-          return new Attribute(ResName.qualifyResName(attributeSet.getAttributeName(i), "android", "attr"), attributeSet.getAttributeValue(i), "fixme!!!");
+          return new Attribute(resourceLoader.getResourceIndex().getResName(resId), attributeSet.getAttributeValue(i), "fixme!!!");
         }
       }
     }
