--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -27,7 +27,7 @@ import org.robolectric.res.Style;
 import org.robolectric.res.StyleData;
 import org.robolectric.res.TypedResource;
 import org.robolectric.res.builder.ResourceParser;
-import org.robolectric.res.builder.ResourceParser.XmlResourceParserImpl;
+import org.robolectric.res.builder.XmlResourceParserImpl;
 import org.robolectric.util.Strings;
 
 import java.io.ByteArrayInputStream;
@@ -653,7 +653,7 @@ public final class ShadowAssetManager {
       if (attribute != null && !attribute.isNull()) {
         TypedValue typedValue = new TypedValue();
         // If there is an AttributeSet then use the resource loader that the attribute set was created with.
-        ResourceLoader resourceLoader = set != null ? ((ResourceParser.XmlResourceParserImpl) set).getResourceLoader() : this.resourceLoader;
+        ResourceLoader resourceLoader = set != null ? ((XmlResourceParserImpl) set).getResourceLoader() : this.resourceLoader;
         Converter.convertAndFill(attribute, typedValue, resourceLoader, RuntimeEnvironment.getQualifiers(), true);
         //noinspection PointlessArithmeticExpression
         data[offset + ShadowAssetManager.STYLE_TYPE] = typedValue.type;
