--- a/app-under-test/src/main/res/layout/custom_layout.xml
+++ b/app-under-test/src/main/res/layout/custom_layout.xml
@@ -2,8 +2,8 @@
 
 <org.robolectric.util.CustomView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:robolectric="http://schemas.android.com/apk/res/org.robolectric"
+    xmlns:robolectric="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     robolectric:message="@string/hello"
-    robolectric:itemType="string"
+    robolectric:itemType="ungulate"
     />
