`SQLiteLibraryLoader` should be loaded from base classloader so we don't try to reload the native sqlite library multiple times. Shuts up some spurious test warnings.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowSQLiteConnection.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowSQLiteConnection.java.vm
@@ -34,7 +34,7 @@ import com.google.common.util.concurrent.Uninterruptibles;
 import org.robolectric.annotation.Implementation;
 import org.robolectric.annotation.Implements;
 import org.robolectric.annotation.Resetter;
-import org.robolectric.shadows.util.SQLiteLibraryLoader;
+import org.robolectric.internal.nativelibs.SQLiteLibraryLoader;
 
 import java.io.File;
 import java.util.Map;
