Add set, get GroupIdLevel1 ShadowTelephonyManager
Created get and set methods for groupIdLevel1 in ShadowTelephonyManager.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTelephonyManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTelephonyManager.java.vm
@@ -17,6 +17,7 @@ public class ShadowTelephonyManager {
   private PhoneStateListener listener;
   private int eventFlags;
   private String deviceId;
+  private String groupIdLevel1;
   private String networkOperatorName;
   private String networkCountryIso;
   private String networkOperator;
@@ -185,5 +186,14 @@ public class ShadowTelephonyManager {
 
   public void setCellLocation(CellLocation cellLocation) {
     this.cellLocation = cellLocation;
+  }
+
+  @Implementation
+  public String getGroupIdLevel1() {
+    return this.groupIdLevel1;
+  }
+
+  public void setGroupIdLevel1(String groupIdLevel1) {
+    this.groupIdLevel1 = groupIdLevel1;
   }
 }
