Apparently styles can specify a parent of `"Null"`.

--- a/robolectric/src/test/resources/res/values/themes.xml
+++ b/robolectric/src/test/resources/res/values/themes.xml
@@ -20,7 +20,8 @@
     <item name="someLayoutTwo">?someLayoutOne</item>
   </style>
 
-  <style name="Theme.MyTheme" parent=""/>
+  <style name="Theme.MyThemeWithEmptyParent" parent=""/>
+  <style name="Theme.MyThemeWithNullStringParent" parent="Null"/>
 
   <style name="Widget.Robolectric.Button" parent="@android:style/Widget.Button">
     <item name="android:background">#ff00ff00</item>
