Resources.getIdentifier() should return an identifier if it is a valid resource, even if it doesn't exist in the R file. This could be the case if the value, not referenced from Java has been proguarded.
 The current implementation just checks the ResourceIndex which is only aware of the R file, not the actual resources.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -105,11 +105,13 @@ public final class ShadowAssetManager {
 
   @HiddenApi @Implementation
   public int getResourceIdentifier(String name, String defType, String defPackage) {
+    TypedResource value = resourceLoader.getValue(ResName.qualifyResName(name, defPackage, defType), RuntimeEnvironment.getQualifiers());
+    if (value == null) {
+      return 0;
+    }
     ResourceIndex resourceIndex = resourceLoader.getResourceIndex();
     ResName resName = ResName.qualifyResName(name, defPackage, defType);
-    Integer resourceId = resourceIndex.getResourceId(resName);
-    if (resourceId == null) return 0;
-    return resourceId;
+    return resourceIndex.getResourceId(resName);
   }
 
   @HiddenApi @Implementation
