--- a/robolectric/src/test/resources/res/values/attrs.xml
+++ b/robolectric/src/test/resources/res/values/attrs.xml
@@ -47,6 +47,8 @@
   </attr>
 
   <attr name="responses" format="reference"/>
+  <attr name="string1" format="string"/>
+  <attr name="string2" format="string"/>
 
   <declare-styleable name="CustomStateView">
     <attr name="stateFoo" format="boolean" />
