--- a/robolectric/src/test/resources/res/values/themes.xml
+++ b/robolectric/src/test/resources/res/values/themes.xml
@@ -3,6 +3,7 @@
   <style name="Theme.Robolectric" parent="@android:style/Theme">
     <item name="android:buttonStyle">@style/Widget.Robolectric.Button</item>
     <item name="attrFromLib1">value from theme</item>
+    <item name="string1">string 1 from Theme.Robolectric</item>
   </style>
 
   <style name="Theme.AnotherTheme" parent="@style/Theme.Robolectric">
@@ -12,6 +13,8 @@
     <item name="averageSheepWidth">42px</item>
     <item name="animalStyle">@style/Gastropod</item>
     <item name="typeface">custom_font</item>
+    <item name="string1">string 1 from Theme.AnotherTheme</item>
+    <item name="string2">string 2 from Theme.AnotherTheme</item>
   </style>
 
   <style name="Theme.ThirdTheme" parent="@style/Theme.Robolectric">
